# redis-source-code-read

./: .gitignore  CMakeLists.txt  README.md  Redis5.0版本12项新特性.txt  redis中文详解.conf  sentinel.conf
src/: adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c  anet.c  anet.h  aof.c  bio.c  bio.h  bitops.c  childinfo.c  cluster.c  cluster.h  config.c  crc16.c  crc64.c  crc64.h  db.c  dict.c  dict.h  endianconv.c  evict.c  expire.c  intset.c  intset.h  listpack.h  multi.c  networking.c  notify.c  object.c  pqsort.c  pqsort.h  pubsub.c  quicklist.c  quicklist.h  rand.c  (+28 more)
utils/hashtable/: rehashing.c
